--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -8,7 +8,7 @@ RUN apt-get install -y -qqq --no-install-recommends \
     gdb locales python3 python3-pip binutils \
     gcc musl-tools nasm radare2 \
     build-essential libncurses-dev libssl-dev libffi-dev \
-    bc bison flex perl openssl && \
+    bc bison flex perl openssl ruby && \
     apt-get purge -y && \
     apt-get clean -y
 
@@ -19,6 +19,8 @@ RUN locale-gen --purge "en_US.UTF-8" && \
 RUN if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
     if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi && \
     python3 -m pip --no-cache-dir install pwntools unicorn capstone ropper keystone-engine
+
+RUN gem install --no-document one_gadget
 
 COPY root /root
 
