--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -2,7 +2,8 @@ FROM ubuntu:20.10
 
 RUN apt-get update -qq
 
-RUN apt-get install -y -qqq --no-install-recommends \
+RUN DEBIAN_FRONTEND=noninteractive \
+    apt-get install -y -qqq --no-install-recommends \
     sudo file less zsh tmux git vim wget curl htop rsync \
     strace ltrace tree make cmake elfutils \
     gdb locales python3 python3-pip binutils \
@@ -10,9 +11,11 @@ RUN apt-get install -y -qqq --no-install-recommends \
     build-essential libncurses-dev libssl-dev libffi-dev \
     bc bison flex perl openssl ruby && \
     apt-get purge -y && \
-    apt-get clean -y
+    apt-get clean -y && \
+    rm -rf /var/lib/apt/lists/*
 
-RUN locale-gen --purge "en_US.UTF-8" && \
+RUN DEBIAN_FRONTEND=noninteractive \
+    RUN locale-gen --purge "en_US.UTF-8" && \
     echo 'LANG="en_US.UTF-8"\nLANGUAGE="en_US:en"\n' >> /etc/default/locale && \
     dpkg-reconfigure --frontend=noninteractive locales
 
