--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -9,13 +9,13 @@ RUN DEBIAN_FRONTEND=noninteractive \
     gdb locales python3 python3-pip binutils \
     gcc musl-tools nasm radare2 \
     build-essential libncurses-dev libssl-dev libffi-dev \
-    bc bison flex perl openssl ruby && \
+    bc bison flex perl openssl ruby-dev && \
     apt-get purge -y && \
     apt-get clean -y && \
     rm -rf /var/lib/apt/lists/*
 
 RUN DEBIAN_FRONTEND=noninteractive \
-    RUN locale-gen --purge "en_US.UTF-8" && \
+    locale-gen --purge "en_US.UTF-8" && \
     echo 'LANG="en_US.UTF-8"\nLANGUAGE="en_US:en"\n' >> /etc/default/locale && \
     dpkg-reconfigure --frontend=noninteractive locales
 
@@ -23,7 +23,7 @@ RUN if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
     if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi && \
     python3 -m pip --no-cache-dir install pwntools unicorn capstone ropper keystone-engine
 
-RUN gem install --no-document one_gadget
+RUN gem install --no-document one_gadget seccomp-tools
 
 COPY root /root
 ENV PATH="/root/bin:${PATH}"
