--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -5,7 +5,7 @@ RUN apt-get update -qq
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get install -y -qqq --no-install-recommends \
     sudo file less zsh tmux git vim wget curl htop rsync \
-    strace ltrace tree make cmake elfutils \
+    strace ltrace tree make cmake elfutils netcat \
     gdb locales python3 python3-pip binutils \
     gcc musl-tools nasm radare2 lib32z1 \
     build-essential libncurses-dev libssl-dev libffi-dev \
