--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -26,6 +26,12 @@ RUN if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
 RUN gem install --no-document one_gadget seccomp-tools
 
 COPY root /root
+
+RUN cd /root && \
+    git clone https://github.com/pwndbg/pwndbg && \
+    cd pwndbg && \
+    ./setup.sh
+
 ENV PATH="/root/bin:${PATH}"
 ENV LANG="en_US.UTF-8"
 
