--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -27,10 +27,7 @@ RUN gem install --no-document one_gadget seccomp-tools
 
 COPY root /root
 
-RUN cd /root && \
-    git clone https://github.com/pwndbg/pwndbg && \
-    cd pwndbg && \
-    ./setup.sh
+# RUN cd /root && git clone https://github.com/pwndbg/pwndbg && cd pwndbg && ./setup.sh
 
 ENV PATH="/root/bin:${PATH}"
 ENV LANG="en_US.UTF-8"
