--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -7,7 +7,7 @@ RUN DEBIAN_FRONTEND=noninteractive \
     sudo file less zsh tmux git vim wget curl htop rsync \
     strace ltrace tree make cmake elfutils netcat \
     gdb locales python3 python3-pip binutils \
-    gcc musl-tools nasm radare2 lib32z1 \
+    gcc musl-tools nasm radare2 lib32z1 autoconf \
     build-essential libncurses-dev libssl-dev libffi-dev \
     bc bison flex perl openssl ruby-dev && \
     apt-get purge -y && \
@@ -25,10 +25,9 @@ RUN if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
 
 RUN gem install --no-document one_gadget seccomp-tools
 
-COPY root /root
-
 # RUN cd /root && git clone https://github.com/pwndbg/pwndbg && cd pwndbg && ./setup.sh
 
+COPY root /root
 ENV PATH="/root/bin:${PATH}"
 ENV LANG="en_US.UTF-8"
 
