--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -28,6 +28,8 @@ RUN gem install --no-document one_gadget seccomp-tools
 # RUN cd /root && git clone https://github.com/pwndbg/pwndbg && cd pwndbg && ./setup.sh
 
 COPY root /root
+COPY libc /libc
+
 ENV PATH="/root/bin:${PATH}"
 ENV LANG="en_US.UTF-8"
 
