--- a/Dockerfile-alpine
+++ b/Dockerfile-alpine
@@ -1,6 +1,25 @@
 FROM frolvlad/alpine-glibc
 
-RUN apk update
+RUN apk update && \
+    apk add --no-cache \
+      sudo file zsh tmux git vim wget curl htop rsync \
+      strace ltrace tree make cmake elfutils binutils \
+      gdb locales python3 mingw-w64-gcc \
+      g++ nasm radare2 lib32z1 \
+      libc-dev linux-headers \
+      bc bison flex perl openssl ruby-dev
 
-COPY setup/setup-alpine.sh /setup.sh
-RUN /setup.sh
+RUN if [ ! -e /usr/bin/python ]; then ln -sf python3 /usr/bin/python ; fi && \
+    python3 -m ensurepip && \
+    python3 -m pip install --no-cache-dir -U pip setuptools wheel && \
+    if [ ! -e /usr/bin/pip ]; then ln -s pip3 /usr/bin/pip ; fi && \
+    python3 -m pip install --no-cache-dir pwntools unicorn capstone ropper keystone-engine
+
+RUN gem install --no-document one_gadget seccomp-tools
+
+ENV PATH="/root/bin:${PATH}"
+ENV LANG="en_US.UTF-8"
+
+COPY root /root
+
+CMD ["/usr/bin/zsh"]
