--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -8,8 +8,8 @@ RUN : \
     && apt-get update -qq \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         python3.10-dev \
-    && ln -sf python3.10 python \
-    && ln -sf python3.10 python3 \
+    && ln -sf python3.10 /usr/bin/python \
+    && ln -sf python3.10 /usr/bin/python3 \
     && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
     && ln -sf pip3 /usr/bin/pip \
     && apt-get clean \
