--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -9,11 +9,11 @@ RUN : \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         python3.10-dev python3.10-venv \
     && ln -sf python3.10 /usr/bin/python \
+    && mv /usr/bin/python3 /usr/bin/python3-system \
     && ln -sf python3.10 /usr/bin/python3 \
-    && python3 -m ensurepip \
+    && python3.10 -m ensurepip \
     && rm -r /usr/lib/python*/ensurepip \
-    && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
-    && ln -sf pip3 /usr/bin/pip \
+    && python3.10 -m pip install --no-cache-dir -U pip setuptools wheel \
     && apt-get clean
 
 RUN DEBIAN_FRONTEND=noninteractive \
@@ -30,6 +30,7 @@ RUN DEBIAN_FRONTEND=noninteractive \
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         libncurses-dev libssl-dev libffi-dev cargo \
     && python3 -m pip install --no-cache-dir -U pwntools unicorn capstone ropper keystone-engine \
+    && python3-system -m pip install --no-cache-dir -U unicorn capstone ropper keystone-engine \
     && apt-get remove -y --auto-remove \
         libncurses-dev libssl-dev libffi-dev cargo \
     && apt-get purge --auto-remove \
