--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -3,7 +3,7 @@ FROM ubuntu:latest
 RUN : \
     && apt-get update -qq \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
-        software-properties-common \
+        software-properties-common python3-dev \
     && python3 -m ensurepip \
     && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
     && mv /usr/bin/python3 /usr/bin/python3-system \
