--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -4,7 +4,7 @@ RUN : \
     && apt-get update -qq \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         software-properties-common python3-dev python3-pip \
-    && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
+    && python3 -m pip install --no-cache-dir pip setuptools wheel \
     && mv /usr/bin/python3 /usr/bin/python3-system \
     && add-apt-repository ppa:deadsnakes \
     && apt-get update -qq \
