--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -6,14 +6,14 @@ RUN : \
         software-properties-common python3-dev python3-pip \
     && add-apt-repository ppa:deadsnakes \
     && apt-get update -qq \
-    && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
-    && mv /usr/bin/python3 /usr/bin/python3-system \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         python3.10-dev python3.10-venv \
+    && mv /usr/bin/python3 /usr/bin/python3-system \
     && ln -sf python3.10 /usr/bin/python \
     && ln -sf python3.10 /usr/bin/python3 \
-    && python3 -m ensurepip \
-    && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
+    && python3.10 -m ensurepip \
+    && python3.10 -m pip install --no-cache-dir -U pip setuptools wheel \
+    && python3-system -m pip install --no-cache-dir -U pip setuptools wheel \
     && rm -r /usr/lib/python*/ensurepip \
     && apt-get clean
 
