--- a/Dockerfile-ubuntu
+++ b/Dockerfile-ubuntu
@@ -3,17 +3,19 @@ FROM ubuntu:latest
 RUN : \
     && apt-get update -qq \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
-        software-properties-common python3-dev python3-pip \
+        software-properties-common \
     && add-apt-repository ppa:deadsnakes \
     && apt-get update -qq \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         python3.10-dev python3.10-venv \
+    && python3.10 -m ensurepip \
+    && python3.10 -m pip install --no-cache-dir -U pip setuptools wheel \
+    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
+        python3-dev python3-pip \
+    && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
     && mv /usr/bin/python3 /usr/bin/python3-system \
     && ln -sf python3.10 /usr/bin/python \
     && ln -sf python3.10 /usr/bin/python3 \
-    && python3.10 -m ensurepip \
-    && python3.10 -m pip install --no-cache-dir -U pip setuptools wheel \
-    && python3-system -m pip install --no-cache-dir -U pip setuptools wheel \
     && rm -r /usr/lib/python*/ensurepip \
     && apt-get clean
 
