--- a/Dockerfile-ubuntu-20.10
+++ b/Dockerfile-ubuntu-20.10
@@ -1,6 +1,7 @@
 FROM ubuntu:20.10
 
 RUN DEBIAN_FRONTEND=noninteractive \
+    apt-get update -qq && \
     apt-get install -y -qqq --no-install-recommends \
       sudo file less zsh tmux git vim wget curl rsync \
       strace ltrace tree make cmake elfutils netcat \
