--- a/Dockerfile-ubuntu-20.10
+++ b/Dockerfile-ubuntu-20.10
@@ -15,6 +15,8 @@ RUN DEBIAN_FRONTEND=noninteractive \
 RUN : \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         python3-dev python3-pip \
+    && ln -sf python3 /usr/bin/python \
+    && ln -sf pip3 /usr/bin/pip \
     && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         libncurses-dev libssl-dev libffi-dev cargo \
