--- a/Dockerfile-20.10
+++ b/Dockerfile-20.10
@@ -1,26 +1,23 @@
 FROM ubuntu:20.10
 
 RUN DEBIAN_FRONTEND=noninteractive \
-    apt-get update -qq && \
     apt-get install -y -qqq --no-install-recommends \
       sudo file less zsh tmux git vim wget curl rsync \
       strace ltrace tree make cmake elfutils netcat \
       gdb locales binutils g++ g++-multilib musl-tools nasm lib32z1 \
       build-essential perl openssl ruby-dev socat \
+      python3-dev python3-pip \
+    && ln -sf python3 /usr/bin/python \
     && apt-get clean \
     && locale-gen --purge "en_US.UTF-8" \
     && echo 'LANG="en_US.UTF-8"\nLANGUAGE="en_US:en"\n' >> /etc/default/locale \
     && dpkg-reconfigure --frontend=noninteractive locales
 
 RUN : \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
-        python3-dev python3-pip \
-    && ln -sf python3 /usr/bin/python \
-    && ln -sf pip3 /usr/bin/pip \
-    && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
+    && python -m pip install --no-cache-dir -U pip setuptools wheel \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         libncurses-dev libssl-dev libffi-dev cargo \
-    && python3 -m pip install --no-cache-dir -U pwntools unicorn capstone ropper keystone-engine \
+    && python -m pip install --no-cache-dir -U pwntools unicorn capstone ropper keystone-engine \
     && apt-get remove -y --auto-remove \
         libncurses-dev libssl-dev libffi-dev cargo \
     && apt-get purge --auto-remove \
