--- a/Dockerfile-latest
+++ b/Dockerfile-latest
@@ -1,46 +1,27 @@
 FROM ubuntu:latest
 
-RUN : \
-    && apt-get update -qq \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
-        software-properties-common \
-    && add-apt-repository ppa:deadsnakes \
-    && apt-get update -qq \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
-        python3.10-dev python3.10-venv \
-    && python3.10 -m ensurepip \
-    && python3.10 -m pip install --no-cache-dir -U pip setuptools wheel \
-    && rm -r /usr/lib/python*/ensurepip \
-    && apt-get clean
-
 RUN DEBIAN_FRONTEND=noninteractive \
     apt-get install -y -qqq --no-install-recommends \
-    sudo file less zsh tmux git vim wget curl rsync \
-    strace ltrace tree make cmake elfutils netcat \
-    gdb locales binutils g++ g++-multilib musl-tools nasm lib32z1 \
-    build-essential perl openssl ruby-dev socat \
+      sudo file less zsh tmux git vim wget curl rsync \
+      strace ltrace tree make cmake elfutils netcat \
+      gdb locales binutils g++ g++-multilib musl-tools nasm lib32z1 \
+      build-essential perl openssl ruby-dev socat \
+      python3-dev python3-pip \
+    && ln -sf python3 /usr/bin/python \
     && apt-get clean \
     && locale-gen --purge "en_US.UTF-8" \
     && echo 'LANG="en_US.UTF-8"\nLANGUAGE="en_US:en"\n' >> /etc/default/locale \
     && dpkg-reconfigure --frontend=noninteractive locales
 
 RUN : \
-    && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
-        python3-dev python3-pip \
-    && python3 -m pip install --no-cache-dir -U pip setuptools wheel \
-    && mv /usr/bin/python3 /usr/bin/python3-system \
-    && ln -sf python3.10 /usr/bin/python \
-    && ln -sf python3.10 /usr/bin/python3 \
+    && python -m pip install --no-cache-dir -U pip setuptools wheel \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         libncurses-dev libssl-dev libffi-dev cargo \
-    && python3-system -m pip install --no-cache-dir -U unicorn capstone ropper keystone-engine \
-    && python3 -m pip install --no-cache-dir -U pwntools unicorn capstone ropper keystone-engine \
+    && python -m pip install --no-cache-dir -U pwntools unicorn capstone ropper keystone-engine \
     && apt-get remove -y --auto-remove \
         libncurses-dev libssl-dev libffi-dev cargo \
-        python3-pip \
     && apt-get purge --auto-remove \
         libncurses-dev libssl-dev libffi-dev cargo \
-        python3-pip \
     && apt-get clean
 RUN gem install --no-document one_gadget seccomp-tools
 
