--- a/Dockerfile-20.10
+++ b/Dockerfile-20.10
@@ -1,7 +1,9 @@
 FROM ubuntu:20.10
 
-RUN DEBIAN_FRONTEND=noninteractive \
-    apt-get install -y -qqq --no-install-recommends \
+RUN : \
+    && apt-get update \
+    && DEBIAN_FRONTEND=noninteractive \
+      apt-get install -y -qqq --no-install-recommends \
       sudo file less zsh tmux git vim wget curl rsync \
       strace ltrace tree make cmake elfutils netcat \
       gdb locales binutils g++ g++-multilib musl-tools nasm lib32z1 \
