--- a/Dockerfile-latest
+++ b/Dockerfile-latest
@@ -19,7 +19,7 @@ RUN : \
     && python -m pip install --no-cache-dir -U pip setuptools wheel \
     && DEBIAN_FRONTEND=noninteractive apt-get install -y -qqq --no-install-recommends \
         libncurses-dev libssl-dev libffi-dev cargo \
-    && python -m pip install --no-cache-dir -U pwntools unicorn capstone ropper keystone-engine \
+    && python -m pip install --no-cache-dir -U pwntools unicorn capstone ropper keystone-engine pycryptodome \
     && apt-get remove -y --auto-remove \
         libncurses-dev libssl-dev libffi-dev cargo \
     && apt-get purge --auto-remove \
