--- a/root/.tmux.conf
+++ b/root/.tmux.conf
@@ -170,37 +170,16 @@ set -g status-keys vi
 set -g display-time 2000
 
 # default statusbar colors
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
-  "set -g status-fg white \
-    set -g status-bg default \
-    set -g status-attr default"
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
-  "set -g status-style fg=white,bg=default"
+set -g status-style fg=black,bg=green
 
 # default window title colors
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
-  "setw -g window-status-fg white \
-    setw -g window-status-bg default \
-    setw -g window-status-attr dim"
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
-  "set -g window-status-style fg=white,bg=default,dim"
+set -g window-status-style fg=black,bg=green,dim
 
 # active window title colors
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
-  "setw -g window-status-current-fg cyan \
-    setw -g window-status-current-bg default \
-    setw -g window-status-current-attr bright \
-    setw -g window-status-current-attr underscore"
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
-  "set -g window-status-current-style fg=cyan,bg=default,bright,underscore"
+set -g window-status-current-style fg=black,bg=green,bright,underscore
 
 # command/message line colors
-if-shell -b '[ "$(echo "$TMUX_VERSION < 2.9" | bc)" = 1 ]' \
-  "set -g message-fg white \
-    set -g message-bg black \
-    set -g message-attr bright"
-if-shell -b '[ "$(echo "$TMUX_VERSION >= 2.9" | bc)" = 1 ]' \
-  "set -g message-style fg=white,bg=black,bright"
+set -g message-style fg=black,bg=yellow,bright
 
 # what to be displayed on the right status
 set -g status-interval 3600
@@ -209,7 +188,7 @@ set -g status-right ' } %Y-%m-%d '
 
 # what to be displayed on the left status
 set -g status-left-length 36
-set-option -g status-left " #[fg=green]#[fg=colour20]#(echo $USER)#[default]@#[fg=colour20]#h#[default] #[fg=colour160][#S]#[default] { "
+set-option -g status-left " #[fg=colour20]#(echo $USER)#[default]@#[fg=colour20]#h#[default] #[fg=colour160][#S]#[default] { "
 
 # -----------------------------
 # Platform fix
