--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -13,6 +13,7 @@ jobs:
       - uses: actions/checkout@v2
       - uses: actions/setup-python@v2
       - run: |
+          git fetch --all
           git checkout -t origin/deploy || git checkout -b deploy
           git merge main
       - run: python generate.py
