--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -15,13 +15,13 @@ jobs:
           fetch-depth: 0
       - uses: actions/setup-python@v2
       - run: |
-          git fetch --all
+          git config --local user.email "github-actions[bot]@users.noreply.github.com"
+          git config --local user.name "github-actions[bot]"
+      - run: |
           git checkout -t origin/deploy || git checkout -b deploy
           git merge main
       - run: python generate.py
       - run: |
-          git config --local user.email "github-actions[bot]@users.noreply.github.com"
-          git config --local user.name "github-actions[bot]"
           git add -f Dockerfiles/*
           git commit -m "build dockerfiles"
           git push https://${GITHUB_ACTOR}:${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git HEAD:deploy
