--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -11,17 +11,11 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v2
-        with:
-          fetch-depth: 0
       - uses: actions/setup-python@v2
+      - run: python generate.py
       - run: |
           git config --local user.email "github-actions[bot]@users.noreply.github.com"
           git config --local user.name "github-actions[bot]"
-      - run: |
-          git checkout -t origin/deploy || git checkout -b deploy
-          git merge main
-      - run: python generate.py
-      - run: |
           git add -f Dockerfiles/*
-          git commit -m "build dockerfiles" || true
-          git push https://${GITHUB_ACTOR}:${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git HEAD:deploy
+          git commit -m "build dockerfiles"
+          git push -f https://${GITHUB_ACTOR}:${{ secrets.GH_TOKEN }}@github.com/${GITHUB_REPOSITORY}.git HEAD:deploy
