--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -20,14 +20,21 @@ concurrency:
 jobs:
   builder:
     runs-on: ubuntu-latest
+    strategy:
+      matrix:
+        tag:
+        - 'devel'
+        - 'rolling'
+        - 'latest'
+        - '22.04'
+        - '20.04'
+        - '18.04'
     steps:
-      - uses: actions/checkout@v2
-
-      - uses: actions/setup-python@v2
-      - run: python generate.py
-
       - name: Checkout
         uses: actions/checkout@v3
+
+      - run: |
+        sed -i 's/tag/${{ matrix.tag }}/' Docker
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
@@ -48,7 +55,7 @@ jobs:
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
         with:
-          context: builder
+          context: .
           push: true
           tags: ${{ steps.meta.outputs.tags }}
           labels: ${{ steps.meta.outputs.labels }}
