--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -33,7 +33,7 @@ jobs:
       - name: Checkout
         uses: actions/checkout@v3
 
-      - run: sed -i 's/tag/${{ matrix.tag }}/' Docker
+      - run: sed -i 's/tag/${{ matrix.tag }}/' Dockerfile
 
       - name: Set up Docker Buildx
         uses: docker/setup-buildx-action@v2
