--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -54,7 +54,7 @@ jobs:
         uses: docker/metadata-action@v4
         with:
           images: ${{ env.IMAGE_NAME }}
-          tags: latest
+          tags: ${{ matrix.tag }}
 
       - name: Build and push Docker image
         uses: docker/build-push-action@v3
