--- a/.github/workflows/generate.yml
+++ b/.github/workflows/generate.yml
@@ -25,7 +25,7 @@ jobs:
       fail-fast: false
       matrix:
         tag:
-        - 'devel'
+          # - 'devel'
         - 'rolling'
         - 'latest'
         - '22.04'
